# eot-utils

./: ChangeLog  Makefile.am  Makefile.in  README  bootstrap.sh  config.h.in  configure  configure.in  eotinfo.1  eotinfo.c  mkeot.c
share/man/man1/: mkeot.1
